- updated speakers section

--- a/src/pug/includes/march_2022.pug
+++ b/src/pug/includes/march_2022.pug
@@ -1,17 +1,23 @@
 //- Replace these variables to generate a new page
-- var title = "Open Software and Standards Code Sprint";
+- var title = "2022 Joint OGC OSGeo ASF Code Sprint";
 - var date = "March, 1-3 2021";
 - var tagline = "Open Software and Standards Code Sprint";
 - var registration_link = "https://portal.ogc.org/public_ogc/register/211117api_codesprint.php";
 - var about = "A Code Sprint is a three day virtual event, where dozens of developers from around the world come together to code and share their ideas. The main goals of this code sprint are to support the development open standards for geospatial informations, and to support the development of free and open source software which implements those standards, as well as creating awareness about the standards and software projects. This code sprint is hosted by the Open Geospatial Consortium (OGC), The Open Geospatial Foundation (OSGeo) and Apache Software Foundation (ASF).";
 
 - 
-    var speakers = [{"src": "assets/img/clemens.jpg", "alt": "Clemens", "h3": "Clemens Portele", 
-        "p": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. "},
+    var speakers = [{"src": "assets/img/angelo.jpeg", "alt": "Angelos", "h3": "Angelos Tzotsos", 
+        "p": "President, Board of Directors OSGeo. "},
         {"src": "assets/img/gobe.jpeg", "alt": "Gobe", "h3": "Gobe Hobona", 
-        "p": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. "},
+        "p": "Director of Product Management, Standards OGC. "},
         {"src": "assets/img/tom.jpeg", "alt": "Tom", "h3": "Tom Kralidis", 
-        "p": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. "}
+        "p": "OSGeo Board Member and Key Contributor of FOSS4G projects."},
+        {"src": "assets/img/jo.jpeg", "alt": "Joana", "h3": "Joana Simoes", 
+        "p": "Developer Relations at OGC, OSGeo Charter Member."},
+        {"src": "assets/img/martin.jpeg", "alt": "Martin", "h3": "Martin Desruisseaux", 
+        "p": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."},
+        {"src": "assets/img/scott.jpeg", "alt": "Scott", "h3": "Scott Simmons", 
+        "p": "Chief Standards Officer OGC."}
         ];
 
 - var start_date = "2022/03/02 00:00:00";
