--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -119,8 +119,9 @@ html(lang='en')
                             button.active(type='button' data-bs-target='#carouselExampleControls' data-bs-slide-to='0' aria-current='true' aria-label='Slide 1')
                             button(type='button' data-bs-target='#carouselExampleControls' data-bs-slide-to='1' aria-label='Slide 2')
                             button(type='button' data-bs-target='#carouselExampleControls' data-bs-slide-to='2' aria-label='Slide 3')
+                            button(type='button' data-bs-target='#carouselExampleControls' data-bs-slide-to='3' aria-label='Slide 4')
+                            button(type='button' data-bs-target='#carouselExampleControls' data-bs-slide-to='4' aria-label='Slide 5')
 
-                        
                         .carousel-inner
                             .carousel-item.active
                                 img.rounded-circle(src=speakers[0].src alt=speakers[0].alt height='200' )
