- updated OGC color - updated copyright

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -137,24 +137,6 @@ html(lang='en')
                                         p #{speakers[i].p} 
                             - }
 
-
-                        //- .carousel-inner
-                        //-     .carousel-item.active
-                        //-         img.rounded-circle(src='assets/img/clemens.jpg' alt='Clemens' height='200' )
-                        //-         .carousel-caption.d-none.d-md-block
-                        //-             h3 Clemens Portele
-                        //-             p Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        //-     .carousel-item
-                        //-         img.rounded-circle(src='assets/img/gobe.jpeg' alt='Gobe' height='200')
-                        //-         .carousel-caption.d-none.d-md-block
-                        //-             h3 Gobe Hobona
-                        //-             p Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        //-     .carousel-item
-                        //-         img.rounded-circle(src='assets/img/tom.jpeg' alt='Tom' height='200' )
-                        //-         .carousel-caption.d-none.d-md-block                                
-                        //-             h3 Tom Kralidis
-                        //-             p Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-
                         button.carousel-control-prev(type='button' data-bs-target='#carouselExampleControls' data-bs-slide='prev')
                             span.carousel-control-prev-icon(aria-hidden='true')
                             span.visually-hidden Previous
@@ -327,7 +309,7 @@ html(lang='en')
             .container
                 .row.align-items-center
                     .col-lg-4.text-lg-start
-                        | Copyright &copy; 2021. Open Geospatial Consortium all rights reserved
+                        | Copyright &copy; 2022. Open Geospatial Consortium all rights reserved
                     .col-lg-4.my-3.my-lg-0
                         a.btn.btn-dark.btn-social.mx-2(href='https://twitter.com/opengeospatial/')
                             i.fab.fa-twitter
@@ -352,7 +334,7 @@ html(lang='en')
                                         | OGC Code Sprints do not log or share your personal information.
                                         | We don't track you. We don't profile you. Period
                                     .modal-footer
-                                        button.btn.btn-secondary(type='button' data-bs-dismiss='modal') Close
+                                        button.btn.btn-primary(type='button' data-bs-dismiss='modal') Close
 
         // Bootstrap core JS
   
