--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -5,11 +5,11 @@
 // Override Bootstrap color variables
 
 //$yellow: #ffc800;
-$yellow: #3193d4;
+$ogc-blue: #00B1FF;
 
 // Override Bootstrap state colors variables
 
-$primary: $yellow;
+$primary: $ogc-blue;
 
 // Override Bootstrap contrast ratio
 
