- updated sponsors section

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -250,47 +250,20 @@ html(lang='en')
                 .text-center
                     h2.section-heading.text-uppercase Sponsors
                     p.text-muted 
-                        | Interested in sponsoring the Open Software and Standards Code Sprint? Email us at:
+                        | Interested in sponsoring the Open Software and Standards Code Sprint? Email us at: 
+                        a(href='mailto:standards-team@ogc.org')
+                                i.fa.fa-envelope
                     div.py-5
                         .container
                             .row.align-items-center
 
-                                .col-md-4.col-sm-.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/maxar_gold_logo_rgb.svg',  alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/esa.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/nrcan.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/cubic.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/os.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/microsoft2.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/hexagon.svg', alt='...')  
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/TrimbleR-Horiz-RGB-Blue.svg', alt='...')                                   
-                                .col-md-4.col-sm-6.my-4
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/ecere.svg', alt='...')
-                                .col-md-4.col-sm-6.my-4   
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/interactive-instruments.svg', alt='...')                                      
-                                .col-md-4.col-sm-6.my-4   
-                                    a(href='#!')
-                                        img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/i-bitz_logo.svg', alt='...')                                      
+                                //- .col-md-4.col-sm-6.my-4
+                                a(href='#!')
+                                    img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/os.svg', alt='...')
 
-                p.text-muted.small 
-                    | * The logos above are only for demo purposes.
+
+                //- p.text-muted.small 
+                //-     | * The logos above are only for demo purposes.
  
 
         // Contact
