--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -102,6 +102,10 @@ right: auto;
     padding: 11px;
 }
 
+.accordion-body {
+    text-align:left;
+}
+
 // Increase the padding on sections when screen size is greater
 // than the medium breakpoint (set by Bootstrap)
 
