--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -12,7 +12,7 @@ html(lang='en')
         title #{title}
 
         // Favicon
-        link(rel='icon', type='image/x-icon', href='assets/favicon.ico')
+        link(rel='icon', type='image/x-icon', href='assets/3d_emblem_lockup.ico')
 
         // Font Awesome icons (free version)
         script(src='https://use.fontawesome.com/releases/v5.15.3/js/all.js', crossorigin='anonymous')
@@ -160,28 +160,30 @@ html(lang='en')
                                             | What is a code sprint?
                                     #collapse-one.accordion-collapse.collapse(aria-labelledby='one' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p A Code Sprint is a three day virtual event, where dozens of developers from around the world come together to code and share their ideas regarding sharing geospatial information.
                                 .accordion-item
                                     h2#two.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-two' aria-expanded='false' aria-controls='collapse-two')
                                             | When is the code sprint?
                                     #collapse-two.accordion-collapse.collapse(aria-labelledby='two' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p The code sprint will be a 3 day event from March 1-3, 2022! The welcome webinar will be held on February, 23.
                                 .accordion-item
                                     h2#three.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-three' aria-expanded='false' aria-controls='collapse-three')
                                             | What is the cost?
                                     #collapse-three.accordion-collapse.collapse(aria-labelledby='three' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p Admission is free and includes mentors, workshops, $wag, resources, and a memorable experience!
                                 .accordion-item
                                     h2#four.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-four' aria-expanded='false' aria-controls='collapse-four')
                                             | Where is the schedule?
                                     #collapse-four.accordion-collapse.collapse(aria-labelledby='four' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p You can find the updated schedule on 
+                                                a(href=`${schedule_link}`) this
+                                                | link.
                                 .accordion-item
                                     h2#five.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-five' aria-expanded='false' aria-controls='collapse-five')
@@ -195,7 +197,10 @@ html(lang='en')
                                             | I have more questions!
                                     #collapse-six.accordion-collapse.collapse(aria-labelledby='six' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p Please email us at 
+                                                a(href='mailto:standards-team@ogc.org')
+                                                    i.fa.fa-envelope
+                                                | if you have any questions or concerns!
 
                         .col
                            h2 Tracks
@@ -235,14 +240,16 @@ html(lang='en')
                                             | Can I attend?
                                     #collapse-ten.accordion-collapse.collapse(aria-labelledby='ten' data-bs-parent='#accordion3')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p Everyone is free to attend this code sprint.
                                 .accordion-item
                                     h2#eleven.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-eleven' aria-expanded='false' aria-controls='collapse-eleven')
                                             | When is registration?
                                     #collapse-eleven.accordion-collapse.collapse(aria-labelledby='eleven' data-bs-parent='#accordion3')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p Registration is open and closes on Friday, February 25 2022, 9:00am EST. Follow this
+                                                a(href=`${registration_link}`) link
+                                                | to register!
 
 
         section#sponsors.page-section
