--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -106,6 +106,10 @@ right: auto;
     text-align:left;
 }
 
+.tracks-body {
+    text-align:justify;
+}
+
 // Increase the padding on sections when screen size is greater
 // than the medium breakpoint (set by Bootstrap)
 
