- added links to logos

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -79,13 +79,13 @@ html(lang='en')
                                 | .
                     .row.text-center
                             .col-md-4
-                                a(href='#!')
+                                a(href='https://www.ogc.org/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/ogc.svg', alt='...')
                             .col-md-4
-                                a(href='#!')
+                                a(href='https://www.osgeo.org/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/logo-osgeo.svg', alt='...')
                             .col-md-4
-                                a(href='#!')
+                                a(href='https://www.apache.org/')
                                     img.img-fluid.img-brand.d-block.mx-auto(src='assets/img/logos/Apache_Software_Foundation_Logo_(2016).svg', alt='...')
 
         // Tracks
