--- a/src/pug/includes/march_2022.pug
+++ b/src/pug/includes/march_2022.pug
@@ -1,9 +1,11 @@
 //- Replace these variables to generate a new page
 - var title = "2022 Joint OGC OSGeo ASF Code Sprint";
-- var date = "March, 1-3 2021";
+- var date = "March, 1-3 2022";
+- var date_webinar = "February, 23";
+- var deadline = "Friday, February 25 2022, 9:00am EST";
 - var tagline = "Open Software and Standards Code Sprint";
 - var registration_link = "https://portal.ogc.org/public_ogc/register/220225asf_codesprint.php";
-- var about = "A Code Sprint is a three day virtual event, where dozens of developers from around the world come together to code and share their ideas. The main goals of this code sprint are to support the development open standards for geospatial informations and to support the development of free and open source software which implements those standards, as well as creating awareness about the standards and software projects. The code sprint takes place on the OGC Discord server, and we leverage its channel structure to create a collaborative and productive environment. This code sprint is hosted by the Open Geospatial Consortium (OGC), The Open Geospatial Foundation (OSGeo) and Apache Software Foundation (ASF).";
+- var about = "A Code Sprint is a three day virtual event, where dozens of developers from around the world come together to code and share their ideas. The main goals of this code sprint are to support the development open standards for geospatial informations and to support the development of free and open source software which implements those standards, as well as creating awareness about the standards and software projects. The code sprint takes place on the OGC-events Discord server, and we leverage its channel structure to create a collaborative and productive environment. This code sprint is hosted by the Open Geospatial Consortium (OGC), The Open Geospatial Foundation (OSGeo) and Apache Software Foundation (ASF).";
 - var wiki_link = "https://github.com/opengeospatial/developer-events/wiki/2022-Joint-OGC-%E2%80%93-OSGeo-%E2%80%93-ASF-Code-Sprint";
 - 
     var speakers = [{"src": "assets/img/angelo.jpeg", "alt": "Angelos", "h3": "Angelos Tzotsos", 
