--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -103,7 +103,15 @@ html(lang='en')
                         .tracks-body.text-muted                             
                             p On the main track, developers have the opportunity to contribute to the development of the standards, either by working on implementations of the standards or on the actual standards.
                             p They will be working at their own pace, developing code or in other related activities such as testing, compliance, submitting issues or documentation.
-                            p Discussion is encouraged at the #General channel (text), or at the #Breakout Room (voice) and we will meet at given checkpoints during the day, at the #Main Stage. 
+                            p Discussion is encouraged on 
+                                i.fab.fa-discord
+                                | discord, at the 
+                                a(href="https://discord.gg/3uyaZZuXr3") #General 
+                                | channel (text), or at the 
+                                a(href="https://discord.gg/kZADQ9VNEN") #Breakout Room
+                                | (voice) and we will meet at given checkpoints during the day, at the 
+                                a(href="https://discord.gg/3pezeR98Ks") #Main Stage
+                                | . 
                             p At the end of the code sprint, everyone one will have the chance to demonstrate what they have been working on, during the demo session.
                     .col
                         span.fa-stack.fa-4x
@@ -112,7 +120,18 @@ html(lang='en')
                         h4.my-3 Mentor Stream
                         .tracks-body.text-muted
                             p We acknowledge that not everyone may be familiar or feel comfortable to contribute to the standards yet, so we have curated a parallel track for newcomers.
-                            p On the mentor stream, developers will have the opportunity to learn more about the standards, and give their first steps in using them. The stream will include community led tutorials, which will take place at the #Mentor Room (voice) and access to mentoring on the  #find-a-mentor and #mentor-room (text). 
+                            p On the mentor stream, developers will have the opportunity to learn more about the standards, and give their first steps in using them. The stream will include community led tutorials which will take place on 
+                                i.fab.fa-discord
+                                | discord, at the 
+                                a(href="https://discord.gg/sCd59VufXS") #Mentor Room
+                                | channel (voice) and access to mentoring from staff and community members on the 
+                                a(href="https://discord.gg/WGy3XCt5QB") #find-a-mentor 
+                                | and 
+                                a(href="https://discord.gg/wZvJHB2Es5") #mentor-room 
+                                | (text) channels. 
+                            P You can view 
+                                a(href="https://github.com/opengeospatial/developer-events/wiki/November-2021-Geospatial-API-Code-Sprint#mentor-streams") here
+                                | an example of a mentor stream, from a previous code sprint.
                             p If you don’t know where to start, you probably should check-out the Mentor Stream!
         section#speakers.page-section.bg-dark
 
@@ -173,7 +192,7 @@ html(lang='en')
                                             | When is the code sprint?
                                     #collapse-two.accordion-collapse.collapse(aria-labelledby='two' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p The code sprint will be a 3 day event from March 1-3, 2022! The welcome webinar will be held on February, 23.
+                                            p The code sprint will be a 3 day event from #{date}! The welcome webinar will be held on #{date_webinar}.
                                 .accordion-item
                                     h2#three.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-three' aria-expanded='false' aria-controls='collapse-three')
@@ -193,10 +212,13 @@ html(lang='en')
                                 .accordion-item
                                     h2#five.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-five' aria-expanded='false' aria-controls='collapse-five')
-                                            | But I don't know anything about standards and I am not an expert on geospatial!
+                                            | But I don't know anything about standards nor I am an expert on geospatial!
                                     #collapse-five.accordion-collapse.collapse(aria-labelledby='five' data-bs-parent='#accordion')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p If you are a web developer, working or interested in working with location data this sprint 
+                                                i is also for you. 
+                                            | You can take it as a starting point on a journey to use geospatial data in a more efficient manner. 
+                                            | Do not worry about the things you don't know yet - just bring your enthusiasm and your backend or frontend skills, and we will bring the rest!
                                 .accordion-item
                                     h2#six.accordion-header
                                         button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-six' aria-expanded='false' aria-controls='collapse-six')
@@ -217,7 +239,11 @@ html(lang='en')
                                             | What are the sprint tracks?
                                     #collapse-seven.accordion-collapse.collapse(aria-labelledby='seven' data-bs-parent='#accordion1')
                                         .accordion-body
-                                            p The sprint includes two parallel tracks: the main track and the mentor stream. 
+                                            p The sprint includes two parallel tracks: the 
+                                                i main track 
+                                                | and the 
+                                                i mentor stream
+                                                | . 
                                             | On the main track, developers have the opportunity to contribute to the development of the standards, either by working on implementations of the standard or on the standard itself.
                                             | They will be working at their own pace, developing code or in other related activities such as testing, compliance, submitting issues or documentation. On the mentor stream, they will have the opportunity to learn more about the standards, and give their first steps in using them. The stream will include community led tutorials and access to mentoring.
                                 .accordion-item
@@ -226,7 +252,9 @@ html(lang='en')
                                             | How can I find a mentor?
                                     #collapse-eight.accordion-collapse.collapse(aria-labelledby='eight' data-bs-parent='#accordion1')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p Once the sprint starts, you can find a mentor in the 
+                                                a(href="https://discord.gg/WGy3XCt5QB") #find-a-mentor 
+                                                | channel, on the OGC-events discord server. 
  
                         .col
                            h2 Logistics
@@ -237,7 +265,22 @@ html(lang='en')
                                             | How does a virtual code sprint work?
                                     #collapse-nine.accordion-collapse.collapse(aria-labelledby='nine' data-bs-parent='#accordion2')
                                         .accordion-body
-                                            p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean consequat sapien est. Integer non tempus est. Vivamus consectetur condimentum urna. Phasellus vehicula libero nibh, sit amet varius sapien mattis ut. Duis purus metus, bibendum non leo vitae, auctor gravida ipsum. Nulla nec augue eget mi posuere dapibus. Maecenas vitae est vel massa convallis euismod quis at turpis.
+                                            p A virtual code sprint takes place 100% online. This means that anyone in the world can join, provided they can follow the 
+                                                a(href="https://www.timeanddate.com/time/zones/est") EST
+                                                | timetable.
+                                                | The code sprint runs entirely on the 
+                                                i.fab.fa-discord  
+                                                | discord plattform, which provides both text and video/audio channels.
+                                            p During the code sprint, we will meet at given times in designated channels, according to the 
+                                                a(href=`${schedule_link}`) schedule
+                                                | , and use other channels for spontaneous, synchronous or asynchronous discussion.
+                                                | In some code sprints, participants will also have the opportunity to setup additional meetings in 
+                                                a(href="https://meet.jit.si/") Jitsi 
+                                                | rooms.
+                                            p You can read more about the logistics and other details of the code sprint, on the
+                                                a(href=`${wiki_link}`) wiki page
+                                                | .
+                                                                            
 
                         .col
                            h2 Registration
@@ -255,7 +298,7 @@ html(lang='en')
                                             | When is registration?
                                     #collapse-eleven.accordion-collapse.collapse(aria-labelledby='eleven' data-bs-parent='#accordion3')
                                         .accordion-body
-                                            p Registration is open and closes on Friday, February 25 2022, 9:00am EST. Follow this
+                                            p Registration is open and closes on #{deadline}. Follow this
                                                 a(href=`${registration_link}`) link
                                                 | to register!
 
