--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -280,7 +280,22 @@ html(lang='en')
                                             p You can read more about the logistics and other details of the code sprint, on the
                                                 a(href=`${wiki_link}`) wiki page
                                                 | .
-                                                                            
+                                .accordion-item
+                                    h2#nine-1.accordion-header
+                                        button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-nine-1' aria-expanded='false' aria-controls='collapse-nine-1')
+                                            | I think I won't be able to attend all the sessions. Will you record them?
+                                    #collapse-nine-1.accordion-collapse.collapse(aria-labelledby='nine-1' data-bs-parent='#accordion2')
+                                        .accordion-body
+                                            p There will be audio and video recordings of some sessions, which will be available for registered participants. 
+                                .accordion-item
+                                    h2#nine-2.accordion-header
+                                        button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-nine-2' aria-expanded='false' aria-controls='collapse-nine-1')
+                                            | Do I need to be at the code sprint 100% of the time?
+                                    #collapse-nine-2.accordion-collapse.collapse(aria-labelledby='nine-2' data-bs-parent='#accordion2')
+                                        .accordion-body
+                                            p We are empathetic towards the fact that people's schedules may not allow them to be at the code sprint 100% of the time, during the 3 days of the event.
+                                            | Just bear in mind, that in the case of sponsored code sprints you may need to demonstrate a minimum attendance, if you apply for funding.
+                                            | If the code sprint is not sponsored or you do not require funding, your attendance rate is completely up to you.                                                                             
 
                         .col
                            h2 Registration
@@ -301,6 +316,19 @@ html(lang='en')
                                             p Registration is open and closes on #{deadline}. Follow this
                                                 a(href=`${registration_link}`) link
                                                 | to register!
+                                .accordion-item
+                                    h2#eleven-1.accordion-header
+                                        button.accordion-button.collapsed(type='button' data-bs-toggle='collapse' data-bs-target='#collapse-eleven-1' aria-expanded='false' aria-controls='collapse-eleven')
+                                            | Can I apply for funding?
+                                    #collapse-eleven-1.accordion-collapse.collapse(aria-labelledby='eleven-1' data-bs-parent='#accordion3')
+                                        .accordion-body
+                                            p In sponsored code sprints, cost-share funding may be available, in order to cover the time developers spend in the code sprint.
+                                            | Just bear in mind that some conditions may have to be fulfilled, in order to be eligible for funding.
+                                            | We encourage you to check the 
+                                            a(href=`${wiki_link}`) wiki page 
+                                            | for the latest details on funding opportunities.
+
+
 
 
         section#sponsors.page-section
